--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>My Map</h1>
-    <div id='map' style='width: 400px; height: 300px;'></div>
+    <div id='map' style='width: 100%; height: 600px;'></div>
     <script>
       mapboxgl.accessToken = 'pk.eyJ1Ijoid2luZzc4NyIsImEiOiJjazZtcmNjZjMwNXlzM2xxb2p0YnkwNzNkIn0.MBGFjku4tTGihMe-EN_bGA';
       var map = new mapboxgl.Map({
