--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       mapboxgl.accessToken = 'pk.eyJ1Ijoid2luZzc4NyIsImEiOiJjazZtcmNjZjMwNXlzM2xxb2p0YnkwNzNkIn0.MBGFjku4tTGihMe-EN_bGA';
       var map = new mapboxgl.Map({
         container: 'map',
+        center: [139.764, 35.679],
+        zoom: 13,
         style: 'mapbox://styles/wing787/ck6msvmox1fyw1ildicrydkqc'
       });
     </script>
